# android-api-SecureKeys

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.gradle  circle.yml  dependencies.gradle  gradle.properties  libsecure-keys.dylib  settings.gradle
SecureKeys/: build.gradle
SecureKeys/src/main/cpp/: native-lib.cpp
SecureKeys/src/main/java/com/u/securekeys/: MapImpl.java  SecureKeys.java
SecureKeys/src/main/res/values/: strings.xml
SecureKeys/src/test/java/com/u/securekeys/: ExampleUnitTest.java
annotation/: build.gradle
ci/: install_android.sh  install_cmake.sh  install_dependencies.sh  install_ndk.sh  run_after_failure.sh  run_before_install.sh  run_script.sh
core/: CMakeLists.txt  build.gradle  proguard-rules.pro
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  aes.cpp  aes.h  native-lib.cpp  secure-keys.cpp
core/src/main/cpp/crypto/: aes.cpp  aes.h  base64.cpp  base64.h  crypto_wrapper.cpp  crypto_wrapper.h
core/src/main/java/com/u/securekeys/: SecureEnvironment.java  SecureKeys.java
core/src/test/java/com/u/securekeys/: ExampleUnitTest.java  SecureEnvironmentTest.java
gradle/wrapper/: gradle-wrapper.properties
processor/: build.gradle
processor/src/main/java/com/u/securekeys/: SecureKeysProcessor.java
processor/src/test/java/com/u/securekeys/: SecureKeysProcessorTest.java
testapp/: build.gradle  proguard-rules.pro
testapp/src/main/: AndroidManifest.xml
testapp/src/main/java/com/u/testapp/: MainActivity.java
testapp/src/main/res/layout/: activity_main.xml
(+9 files in other folders)
